--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "bootstrap": "^5.3.2",
     "cookies-next": "^4.0.0",
     "i18next": "^23.6.0",
     "next": "14.0.1",
