--- a/package.json
+++ b/package.json
@@ -9,19 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.16",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.4",
+    "@mui/x-date-pickers": "^6.17.0",
+    "add": "^2.0.6",
     "bootstrap": "^5.3.2",
     "cookies-next": "^4.0.0",
+    "dayjs": "^1.11.10",
     "i18next": "^23.6.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "next": "14.0.1",
     "next-i18next": "^15.0.0",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
     "react-i18next": "^13.3.1",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "styled-components": "^6.1.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
