--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.4",
+    "@mui/styles": "^5.14.16",
     "@mui/x-date-pickers": "^6.17.0",
     "add": "^2.0.6",
     "bootstrap": "^5.3.2",
