--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -40,7 +41,9 @@
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.0.1",
+    "eslint-config-prettier": "^9.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   },
