--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.16",
+    "@mui/joy": "^5.0.0-beta.14",
     "@mui/material": "^5.14.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.4",
     "@mui/styles": "^5.14.16",
     "@mui/x-date-pickers": "^6.17.0",
-    "@mui/joy": "^5.0.0-beta.14",
     "add": "^2.0.6",
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "cookies-next": "^4.0.0",
     "dayjs": "^1.11.10",
