--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ API_ROOT = http://localhost:8000
 FRONTEND_ROOT = http://localhost:3000
 ACCESS_TOKEN_MAX_AGE = 600
 REFRESH_TOKEN_MAX_AGE = 2592000
+
+GOOGLE_ID=
+GOOGLE_SECRET=
