--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "cookies-next": "^4.0.0",
     "dayjs": "^1.11.10",
     "i18next": "^23.6.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "next": "14.0.1",
