--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-TIMEZONE = Asia/Taipei
 NEXT_PUBLIC_API_ROOT = http://localhost:8000
 FRONTEND_ROOT = http://localhost:3000
 ACCESS_TOKEN_MAX_AGE = 600
@@ -6,3 +5,6 @@ REFRESH_TOKEN_MAX_AGE = 2592000
 
 GOOGLE_ID=
 GOOGLE_SECRET=
+
+JWT_SECRET=
+JWT_EXPIRES_IN=
